# LRU.KR

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  main.py  pyproject.toml  qodana.yaml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: codeql.yml  qodana_code_quality.yml
src/: __init__.py  function.py  schema.py  variable.py
templates/: 404.html  index.html
