[project]
name = "lru-kr"
version = "6.7.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "emoji>=2.14.1",
    "fastapi[all]>=0.115.12",
    "hypercorn>=0.17.3",
    "lxml>=5.3.2",
    "nest-asyncio>=1.6.0",
    "pillow>=11.1.0",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "qrcode>=8.1",
    "ruff>=0.11.6",
    "ty>=0.0.1a13",
    "valkey[libvalkey]>=6.1.1",
]
